                if you upgrade from an instance of Creme 2.6, you have to configure your blocks to display
                this field if you want to see it. As the field is optional, you can also hide it to remove
                it everywhere (notably forms).
        * Activities :
            - A field of 'Activity', "Fixed or floating?" (internal name: 'floating_type') is now visible.
        * Opportunities :
            - You can now create unsuccessful phone calls from an Opportunity's detail-view :
                - A button has been added (not enabled in default installations).
                - In the block "Linked Contacts", you can activate an new action in the configuration (idem).

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # Deprecations :
            - The method 'creme_core.core.entity_cell.EntityCellCustomField.build()' with integer "value" is deprecated;
              pass a string (ID ou UUID) instead.
            - The method 'creme_core.models.creme_property.CremePropertyTypeManager.smart_update_or_create() is deprecated;
              use the classical methods 'create()' or 'update_or_create()' instead.
              Notice: if you still want to set the field "subject_ctypes" from models like before,
                      you can use the new method 'CremePropertyType.set_subject_ctypes()'.
            - The method 'creme_core.tests.base._CremeTestCase.assertRelationCount' is deprecated;
              use the new methods 'assertHaveRelation()' & 'assertHaveNoRelation()' instead.
            - App :
                * Activities :
                    - The constants 'NARROW', 'FLOATING_TIME' & 'FLOATING' are now deprecated;
                      use 'Activity.FloatingType.*' instead.
        # The model 'creme_core.models.FileRef' get a new optional field "description";
          it's used by the new view which displays all FileRefs (so feel free to fill it).
        # Apps :