@@ -41,7 +41,7 @@
                             </div>
                             <div class='business-card-indicators'>
                                 {% block card_indicators %}{# OVERRIDE !! --------------------------------- #}
-                                <div class='business-card-indicator business-card-warning-indicator'>I am very important</div>
+                                 <div class='business-card-indicator business-card-warning-indicator'>I am very important</div>
                                 {% endblock %}{# OVERRIDE !! [end] -------------------------------- #}
                             </div>
                         </div>
